[project]
name = "stockpeers"
version = "0.1.0"
description = "Stock peer group analysis: easily compare stocks against others in their peer group"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "pandas>=2.2.3",
    "streamlit-nightly>=1.44.2.dev20250415",
    "yfinance>=0.2.55",
]
